# JLJH2022-summer

20.standard_robot/: .mxproject  standard_robot.ioc
20.standard_robot/Inc/: main.h  stm32f4xx_it.h  usbd_cdc_if.h
20.standard_robot/MDK-ARM/: standard_robot.uvguix.19459  standard_robot.uvguix.LiangLebin  standard_robot.uvguix.pc  standard_robot.uvoptx  standard_robot.uvprojx  startup_stm32f407xx.lst
20.standard_robot/MDK-ARM/standard_tpye_c/: 3508pid_task.crf  3508pid_task.d  6020anglecontrol.crf  6020anglecontrol.d  adc.crf  adc.d  ahrs_middleware.crf  ahrs_middleware.d  anglecontrol3508_task.crf  anglecontrol3508_task.d  bmi088driver.crf  bsp_rc.d  (+235 more)
20.standard_robot/Src/: can.c  freertos.c  gpio.c  main.c  motor_task.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
20.standard_robot/application/: 6020AngleControl.c  6020AngleControl.h  AngleControl3508_task.c  CAN_receive.c  CAN_receive.h  RelayControl_task.c  RelayControl_task.h  RosControl_task.c  RosControl_task.h  ServoControl_task.c  ServoControl_task.h  gimbal_task.c  led_flow_task.c  pwmR_task.c  pwmR_task.h  remote_control.c  servo_task.c  up_3508pid_task.c  up_3508pid_task.h  usb_task.c
simple_robot/: CMakeLists.txt  package.xml  readme.md  socket.py
simple_robot/include/: protocol.h  robot.h
simple_robot/msg/: RGB_msg.msg  motor_msg.msg  sc_led_msg.msg
simple_robot/src/: robot_node.cpp  serial_device.cpp
simple_robot/srv/: sc_servo_srv.srv
simple_robot/stm32_project/: 20.standard_robot.rar
电器板/: RM_ESC_Center_Board2.stp  RoboMaster 电池架.step.SLDPRT  底板.SLDPRT
(+7 files in other folders)
